force-app/main/default/objects/vlocity_cmt__ProductPublishEvent__c/vlocity_cmt__ProductPublishEvent__c.object-meta.xml
<CustomObject>
    <description>Represents a publishing event that performs a create or update action of product from source system to target system</description>
    <label>Product Publish Event</label>
    <nameField>
        <label>Product Publish Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Publish Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>