force-app/main/default/objects/vlocity_cmt__ProductPublishEvent__c/fields/vlocity_cmt__ActionName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ActionName__c</fullName>
    <description>The name of the action performed by the event in the target system. For example, to create or update a product.</description>
    <label>Action Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>