force-app/main/default/objects/vlocity_cmt__ProductPublishEvent__c/fields/vlocity_cmt__ErrorInformation__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ErrorInformation__c</fullName>
    <description>The error log about the failed action.</description>
    <label>Error Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>