force-app/main/default/objects/vlocity_cmt__ProductPublishEvent__c/fields/vlocity_cmt__Product__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product that&apos;s associated with the event.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Publish Events</relationshipLabel>
    <relationshipName>ProductPublishEvents</relationshipName>
    <type>Lookup</type>
</CustomField>