force-app/main/default/objects/vlocity_cmt__ProductPublishEvent__c/fields/vlocity_cmt__Status__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Status__c</fullName>
    <description>Specifies the status of the event.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>