force-app/main/default/objects/vlocity_cmt__ProductPublishEvent__c/fields/vlocity_cmt__TargetSystemEventDateTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__TargetSystemEventDateTime__c</fullName>
    <description>The date and time of the action that&apos;s performed on the target system for the product.</description>
    <label>Target System Event Date Time</label>
    <type>DateTime</type>
</CustomField>