force-app/main/default/objects/vlocity_cmt__ProductPublishEvent__c/fields/vlocity_cmt__TargetSystemName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__TargetSystemName__c</fullName>
    <description>The name of the target system where the action is performed.</description>
    <externalId>true</externalId>
    <label>Target System Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>