force-app/main/default/objects/vlocity_cmt__ProductPublishEvent__c/fields/vlocity_cmt__TargetSystemProductIdentifier__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__TargetSystemProductIdentifier__c</fullName>
    <description>The identifier of the product in the target system where the action is performed.</description>
    <externalId>true</externalId>
    <label>Target System Product Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>