force-app/main/default/objects/vlocity_cmt__ProductPublishEvent__c/listViews/vlocity_cmt__All_ProductPublishEvents.listView-meta.xml
<ListView>
    <fullName>vlocity_cmt__All_ProductPublishEvents</fullName>
    <columns>NAME</columns>
    <columns>vlocity_cmt__Product__c</columns>
    <columns>vlocity_cmt__TargetSystemName__c</columns>
    <columns>vlocity_cmt__TargetSystemProductIdentifier__c</columns>
    <columns>vlocity_cmt__Status__c</columns>
    <columns>vlocity_cmt__ActionName__c</columns>
    <columns>vlocity_cmt__SourceSystemEventDateTime__c</columns>
    <columns>vlocity_cmt__TargetSystemEventDateTime__c</columns>
    <columns>vlocity_cmt__ErrorInformation__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Product Publish Events</label>
</ListView>